crates/wac-parser/tests/parser/fail/stream-missing-close.wac
package test:comp;

type bad = stream<u8;
